nextflow/non-experimental/work/68/7d92c393f85388970260c358dae599/.command.log
Loading biopython/1.79
  Loading requirement: intel-mkl/2020.3.304 python3/3.9.2 pythonlib/3.9.2
  File "/g/data/xl04/ka6418/github/ausarg/nextflow/non-experimental/work/68/7d92c393f85388970260c358dae599/.command.sh", line 34
    log.write(f"{timestamp} - {message} - Flowcell: {flowcell_id} - File: {input_file}
              ^
SyntaxError: unterminated string literal (detected at line 34)

======================================================================================
                  Resource Usage on 2023-11-21 09:56:27:
   Job Id:             101924891.gadi-pbs
   Project:            xl04
   Exit Status:        1
   Service Units:      0.01
   NCPUs Requested:    8                      NCPUs Used: 8               
                                           CPU Time Used: 00:00:01        
   Memory Requested:   16.0GB                Memory Used: 26.93MB         
   Walltime requested: 01:00:00            Walltime Used: 00:00:03        
   JobFS requested:    100.0MB                JobFS used: 0B              
======================================================================================
